--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
-/pom.xml
-*jar
-/lib
-/classes
-/native
-/.lein-failures
-/checkouts
-/.lein-deps-sum
-.lein_repls
+pom.xml
+pom.xml.asc
+*.jar
+*.class
+/lib/
+/classes/
+/target/
+/checkouts/
+.lein-deps-sum
+.lein-repl-history
+.lein-plugins/
+.lein-failures
+.nrepl-port
+.calva/
+.clj-kondo/
+.cpcache/
+.lsp/
